--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -102,7 +102,7 @@
                 </p>
                 <p>
                   Але струни звучать так по-осінньому самотньо…
-                  Весна. Вечір. Порожня квартира. Канапки. Сайт знайомств. Чарівна посмішка та зелені сяючі очі…
+                  Літо. Вечір. Порожня квартира. Канапки. Сайт знайомств. Чарівна посмішка та зелені сяючі очі…
                 </p>
                 <span class="signature">Богдан</span>
                 <ul class="social-links">
@@ -356,14 +356,25 @@
       </div> <!-- end section-title -->
       <div class="row content">
         <div class="col col-md-6">
-          <h3>Трансфер</h3>
-          <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
+          <h3>Інфо</h3>
+          <p>У вашому розпорядженні буде особистий трансфер, комфортабельний номер в готелі/квартира, цілодобова консультація з особистих питань.</p>
+          <p>Просимо надати точну інформацію про дату і час приїзду до Львова та кількість людей.</p>
+          <p>Координатор весілля: Марта - 0 (63) 375 17 14. Звертайтесь за телефоном або особисто.</p>
         </div>
         <div class="col col-md-6">
-          <h3>Проживання</h3>
-          <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
+          <h3>Особисте прохання наречених:</h3>
+          <ul>
+            <li>дрес-код вечірні сукні для жінок, костюми для чоловіків;</li>
+            <li>дотриматися кольорової гами свята;</li>
+            <li>не дарувати квітів.</li>
+          </ul>
+          <br/>
+          <%=	image_tag 'color-scheme-2.svg' %>
+
         </div>
+
       </div> <!-- end row -->
+
     </div> <!-- end container -->
   </section>
 
