--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -363,13 +363,13 @@
         </div>
         <div class="col col-md-6">
           <h3>Особисте прохання наречених:</h3>
-          <ul>
-            <li>дрес-код вечірні сукні для жінок, костюми для чоловіків;</li>
-            <li>дотриматися кольорової гами свята;</li>
-            <li>не дарувати квітів.</li>
-          </ul>
+          <p>дрес-код вечірні сукні для жінок, костюми для чоловіків;</p>
+          <p>дотриматися кольорової гами свята;</p>
+          <p>не дарувати квітів.</p>
           <br/>
-          <%=	image_tag 'color-scheme-2.svg' %>
+          <center>
+            <%=	image_tag 'palette.png', height: 200 %>
+          </center>
 
         </div>
 
