--- a/app/views/survey_mailer/registration_email.html.erb
+++ b/app/views/survey_mailer/registration_email.html.erb
@@ -1,7 +1,7 @@
 <p>
 Ім'я: <%= @survey.name %>
 <br/>
-Email: <%= @survey.email %>
+Мобільний: <%= @survey.phone_number %>
 <br/>
 Кількість гостей: <%= @survey.guest %>
 <br/>
